# cl_demos

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  OpenCL-CTS.patch  README.md  fetch.cmake  t.riscv.sh  t.sh
csrc/: CMakeLists.txt
csrc/absf/: CMakeLists.txt  absf.cl  main.cpp
csrc/enumopencl/: CMakeLists.txt  main.cpp  notice.txt
csrc/hello/: CMakeLists.txt
csrc/simple/: CMakeLists.txt  main.cpp  notice.txt
cts_patch/: OpenCL-CTS.patch
enumopencl/: CMakeLists.txt
