set(TARGET_NAME "cl_enumopencl")
add_executable(${TARGET_NAME} main.c)
if(WITH_OPENCL_SDK)
  target_link_libraries(${TARGET_NAME} OpenCL::Headers OpenCL::OpenCL)
else()
  target_link_libraries(${TARGET_NAME} OpenCL::OpenCL)
endif()

if(WITH_OPENCL_SDK)
  set(TARGET_NAME "cl_enumopenclcpp")
  add_executable(${TARGET_NAME} main.cpp)
  target_link_libraries(${TARGET_NAME} OpenCL::OpenCL OpenCL::HeadersCpp)
endif()
